--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,15 +1,31 @@
 # Base Image
 FROM	python:3.6.5-alpine
 
+
 # Setting working directory
-WORKDIR	/usr/src/app
+WORKDIR	/app
+
+
+# Install Dependencies
+RUN apk update && \
+    apk add --virtual build-deps gcc python-dev musl-dev && \
+    apk add postgresql-dev && \
+    apk add netcat-openbsd
+
 
 # Dealing with requirements
-COPY ./requirements.txt	/usr/src/app/requirements.txt
-RUN	pip	install	-r	requirements.txt
+COPY ./requirements.txt /app/requirements.txt
+RUN pip	install	-r	requirements.txt
+
+
+#	add	entrypoint.sh
+COPY ./entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
 
 # Coping project
-COPY . /usr/src/app
+COPY . /app
+
 
 # Running server
-CMD	python manage.py run -h 0.0.0.0
+CMD python manage.py run -h 0.0.0.0
