--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,14 +1,30 @@
 version: '3.6'
 services:
-  users:
+  base:
     build:
       context: .
       dockerfile: Dockerfile-dev
     volumes:
-      - '.:/usr/src/app'
+      - '.:/app'
     ports:
       - 5003:5000
     environment:
       - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/users_dev
+      - DATABASE_TEST_URL=postgres://postgres:postgres@db:5432/users_test
+    depends_on:
+      - db
+
+  db:
+    build:
+      context: ./project/db
+      dockerfile: Dockerfile
+    ports:
+      - 5103:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+
+  
