Put email unique and add password hash

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -10,7 +10,8 @@ WORKDIR	/app
 RUN apk update && \
     apk add --virtual build-deps gcc python-dev musl-dev && \
     apk add postgresql-dev && \
-    apk add netcat-openbsd
+    apk add netcat-openbsd && \
+    apk add libffi-dev
 
 
 # Dealing with requirements
