--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ psycopg2==2.7.4
 Flask-Testing==0.6.2
 coverage==4.5.1
 gunicorn==19.8.1
-Flask-Bcrypt==0.7.1
+flask-bcrypt==0.7.1
 pyjwt==1.4.2
 flask-migrate==2.2.0
