--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,6 +14,7 @@ services:
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgres://postgres:postgres@db:5432/users_dev
       - DATABASE_TEST_URL=postgres://postgres:postgres@db:5432/users_test
+      - SECRET_KEY=my_precious
     depends_on:
       - db
 
